# administrasi-fakultas

./: extensions.json
.github/: copilot-instructions.md
backend/: Cargo.toml
frontend/: bun.lockb  package.json
frontend/src/: app.css
frontend/src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-separator.svelte
frontend/src/lib/components/ui/header/: header-back-button.svelte  header-dark-mode-toggle.svelte  header-nav-menu.svelte  header-nav-submenu.svelte  header-nav-tab.d.ts  header-nav-tab.svelte  header-notification.svelte  header-search-bar.svelte  header-search.svelte  header-user-menu.svelte  header.svelte  index.ts
frontend/src/routes/beranda/: +page.svelte  command.txt
frontend/src/routes/dosen/: +page.svelte
frontend/src/routes/layanan-umum/: +page.svelte
frontend/src/routes/mahasiswa/: +page.svelte
frontend/src/routes/masuk/: +page.svelte
frontend/src/routes/perkuliahan/: +page.svelte
frontend/src/routes/ujian/: +page.svelte
