[package]
name = "backend"
version = "2.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "64-column-tables"] }
dotenvy = "0.15.7"
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.0"
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-service = "2.0.2"
actix-rt = "2.10.0"
anyhow = "1.0.93"
uuid = { version = "1.11.0", features = ["serde"] }

[features]
default = ["diesel/postgres"]